<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Soccer Quiz App</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="q_1">Question 1)</string>
    <string name="q_2">Question 2)</string>
    <string name="q_3">Question 3)</string>
    <string name="q_4">Question 4)</string>
    <string name="q_5">Question 5)</string>
    <string name="q_6">Question 6)</string>
    <string name="q_7">Question 7)</string>
    <string name="q_8">Question 8)</string>
    <string name="question_1">Out of how many players does a soccer team consist?</string>
    <string name="answer_1_a">10</string>
    <string name="answer_1_b">11</string>
    <string name="answer_1_c">12</string>
    <string name="question_2">How many goals are there on a soccer field?</string>
    <string name="answer_2_a">2</string>
    <string name="answer_2_b">3</string>
    <string name="answer_2_c">4</string>
    <string name="question_3">How many minutes does a soccer match typically last?</string>
    <string name="hint_q3"><i>Type your answer in here</i></string>
    <string name="answer_3"><xliff:g example="90" id="minutes">%d</xliff:g></string>
    <string name="question_4">How many officials are there in a soccer match in the German Bundesliga?</string>
    <string name="answer_4_a">2</string>
    <string name="answer_4_b">3</string>
    <string name="answer_4_c">4</string>
    <string name="question_5">How many teams are dueling in a soccer match?</string>
    <string name="answer_5_a">2</string>
    <string name="answer_5_b">5</string>
    <string name="answer_5_c">6</string>
    <string name="question_6">How many different cards can the referee show to a player?</string>
    <string name="answer_6_a">1</string>
    <string name="answer_6_b">2</string>
    <string name="answer_6_c">4</string>
    <string name="question_7">Which colors do the cards of the referee have?</string>
    <string name="hint_q7"><i>Write: color1 and color2</i></string>
    <string name="question_8">Which of the following positions belong to a soccer team?</string>
    <string name="option_8_a">Goalkeeper</string>
    <string name="option_8_b">Quarterback</string>
    <string name="option_8_c">Defender</string>
    <string name="option_8_d">Center</string>
    <string name="option_8_e">Striker</string>
    <string name="next_button">Next</string>
    <string name="submit_view_results">Submit and view results</string>
    <string name="score_message">Congratulations! You made it through the quiz!
                    \nYour score is: <xliff:g example="2" id="score">%d</xliff:g> out of 8.</string>
</resources>
