<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.soccerquizapp.MainActivity">

<LinearLayout style="@style/LinearLayoutTheme">

    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/q_2"/>

    <TextView
        style="@style/QuestionTextView"
        android:text="@string/question_2" />

    <RadioGroup
        android:id="@+id/r_group_2"
        style="@style/RadioGroupTheme">

        <RadioButton
            android:id="@+id/radio_button_a_q2"
            style="@style/RadioButtonTheme"
            android:text="@string/answer_2_a" />

        <RadioButton
            android:id="@+id/radio_button_b_q2"
            style="@style/RadioButtonTheme"
            android:text="@string/answer_2_b" />

        <RadioButton
            android:id="@+id/radio_button_c_q2"
            style="@style/RadioButtonTheme"
            android:text="@string/answer_2_c" />
    </RadioGroup>

    <Button
        android:id="@+id/nb2"
        style="@style/StartQuizButtonTheme.NQSVRButtonTheme"
        android:onClick="nextQuestion2" />

</LinearLayout>
</ScrollView>