<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LinearLayoutTheme">

    <TextView
        style="@style/QuestionTextView"
        android:text="@string/question_1" />

    <RadioGroup
        android:id="@+id/r_group_1"
        style="@style/RadioGroupTheme">

        <RadioButton
            android:id="@+id/radio_button_a_q1"
            style="@style/RadioButtonTheme"
            android:text="@string/answer_1_a" />

        <RadioButton
            android:id="@+id/radio_button_b_q1"
            style="@style/RadioButtonTheme"
            android:text="@string/answer_1_b" />

        <RadioButton
            android:id="@+id/radio_button_c_q1"
            style="@style/RadioButtonTheme"
            android:text="@string/answer_1_c" />
    </RadioGroup>

    <Button
        android:id="@+id/nb1"
        style="@style/StartQuizButtonTheme.NQSVRButtonTheme"
        android:onClick="nextQuestion" />

</LinearLayout>