<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LinearLayoutTheme">

    <TextView
        style="@style/QuestionTextView"
        android:text="@string/question_4" />

    <RadioGroup
        android:id="@+id/r_group_4"
        style="@style/RadioGroupTheme">

        <RadioButton
            android:id="@+id/radio_button_a_q4"
            style="@style/RadioButtonTheme"
            android:text="@string/answer_4_a" />

        <RadioButton
            android:id="@+id/radio_button_b_q4"
            style="@style/RadioButtonTheme"
            android:text="@string/answer_4_b" />

        <RadioButton
            android:id="@+id/radio_button_c_q4"
            style="@style/RadioButtonTheme"
            android:text="@string/answer_4_c" />
    </RadioGroup>

    <Button
        android:id="@+id/nb4"
        style="@style/StartQuizButtonTheme.NQSVRButtonTheme"
        android:onClick="nextQuestion4" />

</LinearLayout>