<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.soccerquizapp.MainActivity">

    <LinearLayout style="@style/LinearLayoutTheme">

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/q_7" />

        <TextView
            style="@style/QuestionTextView"
            android:text="@string/question_7" />

        <EditText
            android:id="@+id/answer_question_7"
            style="@style/EditTextTheme"
            android:hint="@string/hint_q7" />

        <Button
            android:id="@+id/nb7"
            style="@style/StartQuizButtonTheme.NQSVRButtonTheme"
            android:onClick="nextQuestion7" />

    </LinearLayout>
</ScrollView>