<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.soccerquizapp.MainActivity">

<LinearLayout style="@style/LinearLayoutTheme">

    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/q_3"/>

    <TextView
        style="@style/QuestionTextView"
        android:text="@string/question_3" />

    <EditText
        android:id="@+id/answer_question_3"
        style="@style/EditTextTheme"
        android:gravity="center"
        android:hint="@string/hint_q3"
        android:inputType="number" />

    <Button
        android:id="@+id/nb3"
        style="@style/StartQuizButtonTheme.NQSVRButtonTheme"
        android:onClick="nextQuestion3" />

</LinearLayout>
</ScrollView>